--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
+/* CUSTOM PROPS */
+.root {
+  --text-color: #111517;
+  --body-bg: #fafafa;
+  --element-bg: #fff;
+}
+
+
+
+/* FONTS */
+@font-face {
+  font-family: "Nunito Sans 7pt";
+  src:  url("../fonts/NunitoSans7pt-Regular.woff2") format("woff2"),
+    url("../fonts/NunitoSans7pt-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans 7pt";
+  src:  url("../fonts/NunitoSans7pt-Light.woff2") format("woff2"),
+    url("../fonts/NunitoSans7pt-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans 7pt";
+  src:  url("../fonts/NunitoSans7pt-ExtraBold.woff2") format("woff2"),
+    url("../fonts/NunitoSans7pt-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans 7pt";
+  src:  url("../fonts/NunitoSans7pt-SemiBold.woff2") format("woff2"),
+    url("../fonts/NunitoSans7pt-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 /* GLOBAL STYLES */
 html {
   box-sizing: border-box;
@@ -15,13 +62,13 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  font-family: "Arial";
-  font-size: 16px;
-  line-height: 1.5;
-  color: #222;
+  font-family: "Nunito Sans","Arial", sans-serif;
+  font-size: 14px;
+  line-height: 16;
+  color: var(--text-color);
   padding: 0;
   margin: 0;
-  background-color: #fff;
+  background-color: var(--body-bg);
 }
 
 img {
@@ -29,21 +76,28 @@ img {
   height: auto;
 }
 
+a {
+  text-decoration: none;
+}
+
+/* DARK-MODE */
+.dark-mode {
+  --text-color: #fff;
+  --body-bg: #202C36;
+  --element-bg: #2b3844;
+}
+
 /* CONTAINER */
 .container{
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1320px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
 /* MAIN-CONTENT */
 .main-content{
-  flex-grow: 1;
-}
-
-.content{
   flex-grow: 1;
 }
