--- a/css/style.css
+++ b/css/style.css
@@ -222,14 +222,23 @@ a {
 
 .filter {
   padding: 18px 24px;
-  min-width: 200px;
+  max-width: 200px;
   border-radius: 5px;
   border: 0;
   color: var(--text-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
   background-color: var(--element-bg);
   box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 }
 
+.filter option {
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+}
 
 /* INDEX-COUNTRY */
 .index-countries {
