--- a/css/style.css
+++ b/css/style.css
@@ -598,4 +598,8 @@ a {
     display: flex;
     flex-wrap: wrap;
   }
+  .country-page-back-wrapper {
+    margin-top: 40px;
+    margin-bottom: 64px;
+  }
 }
